@@ -11,8 +11,9 @@ CURL_RETRIES: 6
 
 LOCAL_REPO_SYNC_DIR: $(LOCAL_SYNC_DIR)/$(REPO_NAME)
 LOCAL_REPO_BOOKKEEPING_DIR: $(LOCAL_REPO_SYNC_DIR)/bookkeeping
-HAVE_INFO_MAP_PATH: $(LOCAL_REPO_BOOKKEEPING_DIR)/have_info_map.txt
-NEW_HAVE_INFO_MAP_PATH: $(LOCAL_REPO_BOOKKEEPING_DIR)/new_have_info_map.txt
+HAVE_INFO_MAP_FILE_NAME: have_info_map.txt
+HAVE_INFO_MAP_PATH: $(LOCAL_REPO_BOOKKEEPING_DIR)/$(HAVE_INFO_MAP_FILE_NAME)
+NEW_HAVE_INFO_MAP_PATH: $(LOCAL_REPO_BOOKKEEPING_DIR)/new_$(HAVE_INFO_MAP_FILE_NAME)
 REQUIRED_INFO_MAP_PATH: $(LOCAL_REPO_BOOKKEEPING_DIR)/required_info_map.txt
 TO_SYNC_INFO_MAP_PATH: $(LOCAL_REPO_BOOKKEEPING_DIR)/to_sync_info_map.txt
 LOCAL_REPO_REV_BOOKKEEPING_DIR: $(LOCAL_REPO_BOOKKEEPING_DIR)/$(REPO_REV)
@@ -27,6 +28,7 @@ VENDOR_DIR_NAME: ACME
 SITE_BOOKKEEPING_DIR: $(__SITE_CONFIG_DIR__)
 SITE_VENDOR_BOOKKEEPING_DIR: $(SITE_BOOKKEEPING_DIR)/$(VENDOR_DIR_NAME)
 SITE_REPO_BOOKKEEPING_DIR: $(SITE_VENDOR_BOOKKEEPING_DIR)/$(REPO_NAME)
+SITE_HAVE_INFO_MAP_PATH: $(SITE_REPO_BOOKKEEPING_DIR)/$(HAVE_INFO_MAP_FILE_NAME)
 
 SITE_REQUIRE_FILE_NAME: require.yaml
 SITE_REQUIRE_FILE_PATH: $(SITE_REPO_BOOKKEEPING_DIR)/$(SITE_REQUIRE_FILE_NAME)
